tests/valid_inputs/unary_minus.cpp
// test that unary minus works with int

int main() {
	int a = -42;
	return -a;
}


