tests/invalid_inputs/sema/char_to_double.cpp
// test that implicit char -> double is forbidden

int main() {
	double d = 'a';
}
